Create transition between apps

--- a/equipment_routine/equipment_database/templates/equipment_database/index.html
+++ b/equipment_routine/equipment_database/templates/equipment_database/index.html
@@ -8,4 +8,5 @@
     </ul>
 {% else %}
     <p>No Equipment, Please set equipment information.</p>
+    <a href="{% url 'connect_settlement:display' %}">hogehog</a>
 {% endif %}
